Design first draft

--- a/doc/bibliography.tex
+++ b/doc/bibliography.tex
@@ -1,12 +1,35 @@
 \chapter{Bibliography}
 \begin{thebibliography}{9}
-
-\bibitem{MSH08}
+            
+  \bibitem{MSH08}
   Todd Mytkowicz, Peter Sweeney, Matthias Hauswirth and Amer Diwan,
   \emph{Observer Effect and Measurement Bias in Performance Analysis},
   \url{http://scholar.colorado.edu/csci_techreports/972},
   Computer Science Technical Reports. Paper 972,
   2008.
-
-
+      
+  \bibitem{EYC79}
+  Edward Yourdon and Larry L. Constantine,
+  \emph{Structured Design: Fundamentals of a Discipline of Computer Program and Systems Design},
+  Yourdon Press,
+  1979.
+    
+  \bibitem{RCM03}
+  Robert C. Martin,
+  \emph{Agile Software Development, Principles, Patterns, and Practices},
+  Prentice Hall,
+  2003.
+    
+  \bibitem{AHT99}
+  Andrew Hunt and David Thomas,
+  \emph{The Pragmatic Programmer: From Journeyman to Master},
+  Addison-Wesley,
+  1999.
+            
+  \bibitem{GKM00}
+  Susan L. Graham, Peter B. Kessler and Marshall K. McKusick,
+  \emph{gprof: a Call Graph Execution Profiler},
+  \url{https://docs.freebsd.org/44doc/psd/18.gprof/paper.pdf},
+  Computer Science Division Electrical Engineering and Computer Science Department, University of California, Berkeley Berkeley, California,
+  2000.
 \end{thebibliography}
