--- a/doc/implementation.tex
+++ b/doc/implementation.tex
@@ -1,5 +1,47 @@
 \chapter{Implementation}
-TODO
+
+TODO: intro
 
 % Discuss requirements... measure observer effect
 % Discuss precision and speed
+% Maven
+
+\section{Overview}
+
+TODO
+
+
+\section{Annotations}
+\begin{lstlisting}
+public @interface Measured {
+}
+\end{lstlisting}
+
+\section{Agent}
+
+TODO
+
+
+\section{Time recorder API}
+
+TODO
+
+
+\section{Time recorder implementation}
+
+TODO
+
+
+\section{Time complexity analysis SDK}
+
+TODO
+
+
+\section{Algorithm under test}
+
+TODO
+
+
+\section{Time complexity analyser}
+
+TODO
