--- a/doc/abstract.tex
+++ b/doc/abstract.tex
@@ -5,9 +5,9 @@
   spending in each method. Based on this information the developer is able to
   detect what part of the program is taking more time than expected to execute and
   can act to improve it.
-          
-          
-  What profilers can’t do is to estimate how much time it would take when the input
+                      
+                      
+  \noindent What profilers can’t do is to estimate how much time it would take when the input
   size is increased. This dissertation supports the development of a tool that will
   estimate the time complexity of an algorithm under test with a high precision. This
   allows accurately estimating the time needed for the algorithm to solve a problem
